syntax = "proto3";

option go_package = "pb/game";

message ClassTable {
	uint32 id = 1;
	repeated uint32 skill = 2;
}

message ClassTabledData {
	repeated ClassTable data = 1;
}
